fix carousel to proper position on mobile

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -35,6 +35,7 @@
 
 .navbar-default {
   background-color: #fff;
+  margin-bottom: 0px;
 }
 
 .avatar {
